--- a/app/assets/stylesheets/project/project_index.css.scss
+++ b/app/assets/stylesheets/project/project_index.css.scss
@@ -42,7 +42,7 @@
 
 
     .facet-header {
-      display:block;
+     
       padding: 0 4px 0 4px;
       margin: 5px 0px 5px 0px;
       border-left: 2px solid #111;
@@ -50,9 +50,14 @@
     }
     .facet-list-item {
       display:block;
-      padding: 0 4px 0 4px;
-      margin: 4px 0 4px 0;
+      padding: 0 4px 0 14px;
+      margin: 4px 0 4px 10px;
       border-left: 2px solid #fff;
+    }
+    .facet-controller {
+      font-style: italic;
+      font-size:90%;
+      display:none;
     }
 }
 
