--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -26,7 +26,7 @@
 		</div>
 		<div class="tab-pane" id="projects">
 			<h2> Search Projects </h2>
-			<%= render "projects/project_search" unless Rails.env.test? %>
+			<%= render "projects/search" unless Rails.env.test? %>
 		</div>
 	
 		<div class="tab-pane" id="aggregates" >
