--- a/app/views/projects/_search_export.html.erb
+++ b/app/views/projects/_search_export.html.erb
@@ -1,7 +1,12 @@
 <div class='row'>
   <div class="center">
-    <a class="btn btn-primary" data-toggle="modal" href="#export_dialog">
-    Export as CSV (<%= pluralize(@search.total, "Project") %>)</a>
+    <a class="btn btn-info" data-toggle="modal" href="#export_dialog">
+      Export as CSV (<%= pluralize(@search.total, "Project") %>)
+    </a>
+    <% if current_user_is_aiddata %>
+      <%= link_to "Quick Export (CSV)", "#{@current_url.gsub(/projects/, 'projects.csv')}", class: 'btn' %> 
+      <i>(AidData only)</i>
+    <% end %>
 
 
     <div class="modal hide" id="export_dialog" >
