--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -29,23 +29,14 @@ end %>
 
 <div class='row'>
 	<div style='display:none;text-align:center;' class='span12' id='project-facets-button'>
-		<button class='btn btn-info' style='text-align:center;margin:5px;' onclick='toggle_search_params()'>Show Search Box</button>
+
+		<button class='btn btn-primary' style='text-align:center;margin:5px;' onclick='toggle_search_params()'>Show Search Box</button>
 	</div>
 </div>
 
 <div class='row' >
  	<%= render 'search_export' %>
  </div>
- <% if current_user_is_aiddata %>
-	<div class='row' style='text-align:center'>
-		<br>
-		<p>
-			<%= link_to "Quick Export (CSV)", "#{@current_url.gsub(/projects/, 'projects.csv')}", class: 'btn' %> 
-			<i>(AidData only)</i>
-		</p>
-	</div>
-<% end %>
- <div class='row' >
 	<%= will_paginate @projects %>	
 
 </div>
