Second submit btn on proj edit page

--- a/app/assets/stylesheets/project/project_form.css.scss
+++ b/app/assets/stylesheets/project/project_form.css.scss
@@ -27,6 +27,12 @@
 		margin-left:25px;
 	}
 
+	.on-nav-bar {
+		position: fixed;
+		top: 80px;
+
+	}
+
 	.project-form-anchor:before  {
 		    display:block; 
 		    content:""; 
