--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -33,6 +33,7 @@
 						<%= f.association :verified, wrapper_html: {class: "span3"} %>
 						<%= f.association :status, wrapper_html: {class: "span3"} %>
 						<%= f.association :intent, wrapper_html: {class: "span3"} %>
+						<%= f.input :crs_sector, wrapper_html: {class: "span3"} %>
 					</div>
 					<div class='row-fluid'>
 						<%= f.input :description, input_html: {rows: "8", cols: "30" }, wrapper_html: {class: "span12"} %>
