Search selection counter, formating for money, don't cache org names

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -174,11 +174,12 @@ label {
 }
 
 .boolean {
-	cursor:pointer
-	}
-.boolean:hover {
-	background-color:#d0d9f0;
-	}
+	cursor:pointer;
+
+    &:hover {
+  	background-color:#d0d9f0;
+  	}
+}
 
 
 																				/* Codes CSS */
