Added see all projs to map

--- a/app/views/projects/_search_facet.html.erb
+++ b/app/views/projects/_search_facet.html.erb
@@ -23,7 +23,10 @@
 							name="<%= f[:sym].to_s %>[]" 
 							value="<%= row.value %>"
 							class="search_check boolean <%= f[:sym].to_s %>"
-							<% if @current_url.gsub(/\+/, ' ').include? "#{f[:sym].to_s}[]=#{row.value}" %>
+							<% if (
+									@current_url.gsub(/\+/, ' ').include?("#{f[:sym].to_s}[]=#{row.value}")||
+									@current_url.gsub(/\+/, ' ').include?("#{f[:sym].to_s}=#{row.value}")
+									) %>
 								checked='true'
 							<% end %>
 						>
