--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:first_header, "New Organization") %>
-<% provide(:title, "New Organization")
+<% provide(:title, "New Organization") %>
 
 <%= render 'form' %>
 
