Fixed some issues from Alex's post

--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -93,7 +93,7 @@
 							</div>
 						</div>
 						<div class='span9' id = 'project-form-loan-detail'>
-							<a id='loan-detail-anchor' class='project-form-anchor'></a>
+							<!-- id='loan-detail-anchor' class='project-form-anchor'></a-->
 							<hr>
 							<%= f.simple_fields_for :loan_detail do |loan_detail_form| %>
 								<div class='row-fluid'>
@@ -110,7 +110,7 @@
 			</div>
 			<% add_one_label = "<i class='icon-plus'></i>Add One" %>
 			<div class='row-fluid'>
-				<a id='organizations-anchor' class='project-form-anchor'></a>
+				<!--a id='organizations-anchor' class='project-form-anchor'></a-->
 				<div id = 'project-form-organizations' class='span6 project-accessory-fields'>
 					<p class='row-fluid'>
 						<b>Participating Organizations:</b> <%= link_to_add_fields add_one_label, f, :participating_organizations %>
@@ -129,7 +129,7 @@
 				</div>
 			</div>
 			<div class='row-fluid'>
-				<a id='recipients-anchor' class='project-form-anchor'></a>
+				<!--a id='recipients-anchor' class='project-form-anchor'></a-->
 				<div id = 'project-form-recipients' class='span5 project-accessory-fields'>
 					<p class='row-fluid'>
 						<b>Recipients:</b> <%= link_to_add_fields add_one_label, f, :geopoliticals %>
@@ -149,7 +149,7 @@
 				</div>
 			</div>
 			<div class='row-fluid'>
-				<a id='contacts-anchor' class='project-form-anchor'></a>
+				<!--a id='contacts-anchor' class='project-form-anchor'></a-->
 				
 				<div id = 'project-form-contacts' class='span7 project-accessory-fields'>
 					<p class='row-fluid'>
