--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -15,8 +15,8 @@
 
 <% @organizations.each do |organization| %>
   <tr>
-    <td><%= organization.name %></td>
-    <td><%= organization.description %></td>
+    <td><%= organization.name ? "#{organization.name[0..50]}#{organization.name.length > 50 ? '...' : ''}" : "" %></td>
+    <td><%= organization.description ? "#{organization.description[0..50]}#{organization.description.length > 50 ? '...' : ''}" : "" %></td>
     <td><%= link_to 'View', organization %>
       <% if current_user && current_user.owner == Organization.find_by_name("AidData") %>
          | <%= link_to 'Edit', edit_organization_path(organization) %>
