--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -19,7 +19,7 @@
 			<div class='row-fluid'>
 				
 				<div id ='project-form-project' class='span12'>
-					<a id='project-anchor' class='project-form-anchor'></a>
+					<!-- a id='project-anchor' class='project-form-anchor'></a -->
 					<h3> Project #<%= @project.id || " (new) " %> </h3>
 					<div class='row-fluid'>
 						<%= f.association :donor, wrapper_html: {class: "span2"}, label: 'Donor country' %>
@@ -47,7 +47,7 @@
 						</div>
 					<div class='row-fluid'>
 						<div id = 'project-form-flow-class' class = 'span3'>
-							<a id='flow-class-anchor' class='project-form-anchor'></a>
+							<!--a id='flow-class-anchor' class='project-form-anchor'></a-->
 							<hr>
 							<%= f.simple_fields_for :flow_class do |flow_class_form| %>  
 								<%= flow_class_form.association :oda_like_1 %>
@@ -93,7 +93,7 @@
 							</div>
 						</div>
 						<div class='span9' id = 'project-form-loan-detail'>
-							<!-- id='loan-detail-anchor' class='project-form-anchor'></a-->
+							<!--a id='loan-detail-anchor' class='project-form-anchor'></a-->
 							<hr>
 							<%= f.simple_fields_for :loan_detail do |loan_detail_form| %>
 								<div class='row-fluid'>
