--- a/app/views/shared/_generate_feed_items.html.erb
+++ b/app/views/shared/_generate_feed_items.html.erb
@@ -18,7 +18,7 @@ def get_name(feed_item, patient)
 		patient.flag_type ? patient.flag_type.name : patient.source[0..25]
 	elsif ApplicationHelper::PROJECT_ACCESSORY_OBJECTS.include? feed_item.item_type
 		if this_project = Project.find_by_id(patient.project_id)
-			"#{feed_item.item_type} of project "+ this_project.title
+			"#{feed_item.item_type} of project #{this_project.title}"
 		else 
 			"#{feed_item.item_type}"
 		end
@@ -57,7 +57,7 @@ end
 				restore_path = "/versions/#{f.id}/revert"
 				%>
 			<li>
-				<%= link_to agent.name, agent %> <%= verb %> <%= f.item_type.downcase %> "<%= link_to patient_link_text, patient_path %>" (<%= distance_of_time_in_words_to_now(f.created_at) %> ago) 
+				<%= link_to agent.name, agent %> <%= verb %> <%= f.item_type.underscore.humanize %> "<%= link_to patient_link_text, patient_path %>" (<%= distance_of_time_in_words_to_now(f.created_at) %> ago) 
 					<%= link_to("Click to revert to this version", restore_path, method: :post) if f.item_type == "Project" && current_user_is_aiddata_admin %>
 			</li>
 		 <% else 
