--- a/app/views/projects/_search_export.html.erb
+++ b/app/views/projects/_search_export.html.erb
@@ -99,9 +99,8 @@
   </div>
 </div>
 
+<%= javascript_include_tag "validate/index" %>
 
-<script src="http://code.jquery.com/jquery-latest.js"></script>
-<script type="text/javascript" src="http://jzaefferer.github.com/jquery-validation/jquery.validate.js"></script>
 <script>
   $( ".selector" ).bind( "dialogopen", function(event, ui) {
     $( "#export-form").validationEngine();
