deprecated sector and replaced with crs_sector

--- a/app/views/layouts/_project_menu.html.erb
+++ b/app/views/layouts/_project_menu.html.erb
@@ -28,7 +28,7 @@
     <li class="divider"></li>
     <li><b>Codes:</b></li>
     <li><%= link_to "Statuses", statuses_path %></li>
-    <li><%= link_to "Sectors", sectors_path %></li>
+    <li><%= link_to "CRS Sectors", crs_sectors_path %></li>
     <li><%= link_to "Flow Classes", oda_likes_path %></li>
     <li><%= link_to "Intents", intents_path %></li>
     <!-- li>
