--- a/app/views/static_pages/_analyze_js.html.erb
+++ b/app/views/static_pages/_analyze_js.html.erb
@@ -4,7 +4,6 @@
         <a href="#" id="all" class="btn active">All Projects</a>
         <a href="#" id="year" class="btn">Projects By Year</a>
         <a href="#" id="flow" class="btn">Projects By Flow Class</a>
-        <a href="#" id="sector" class="btn">Projects By Sector</a>
       </div>
 
       <div id='loading-bar' class='offset2 span8' style='margin:20px'>
@@ -30,6 +29,11 @@
             $('#view_selection a').removeClass('active');
             $(this).toggleClass('active');
             toggle_view(view_type);
+            return false;
+          });
+          $('circle').not('#example').click(function(){
+            var circleid = $(this).attr("id")
+            window.location = "/projects/"+circleid
             return false;
           });
         });
