allows facebook users to log in

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,6 +16,7 @@
                   <!-- Links for anyone !-->
                   <%= render 'layouts/project_menu' %>
                   
+                  <%# Find in /app/helpers/sessions_helper %>
                   <% if signed_in? %>
                     <% # Links for signed-in users %>
 
