--- a/app/views/shared/code_index.html.erb
+++ b/app/views/shared/code_index.html.erb
@@ -14,7 +14,7 @@
 <div class='row'>
 <% if objects.length > 0 %>
 
-<table class='code-table'>
+<table class='table table-hover'>
 	<thead>
 		<% objects.first.attributes.each_pair do |k, v| %>
 			<% if !hidden_attributes.include?(k) %>
