File uploads to AidData FS

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -34,7 +34,9 @@
 
 		
 		</ul>
-		<div class="span3" style="background-color:#dad0d0"><p> What can go here?</p><br><br><br><br><br><br></div>
+		<div class="span3" >
+			<%= render 'project_files' %>
+		</div>
 	</div>
 	<div class="project-box span10">
 		<h3>Description:</h3>
