--- a/app/views/projects/_search.html.erb
+++ b/app/views/projects/_search.html.erb
@@ -7,7 +7,7 @@
 	%>
 <% @joiner = @current_url.index("?") ? "&" : "?" 
 	%>
-<% @current_url_without_scope = @current_url.gsub(/&?scope[^=]*=[a-z_]+/, '') %>
+<% @current_url_without_scope = @current_url.gsub(/\&?scope_names[^=]*=.+[\&\?]?/, '') %>
 
 
 <div class="row-fluid" id='project-facets'>
