--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,6 +7,7 @@
       <li><%= link_to "About",   '#' %></li>
       <li><%= link_to "Contact", 'mailto:info@aiddata.org' %></li>
       <li><a href="http://blog.aiddata.org/">Blog</a></li>
+      <li><%= link_to "Staff-Signin", signin_path %></li>
     </ul>
   </nav>
 </footer>
