--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,58 +1,57 @@
- <header class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
+<header class="navbar navbar-fixed-top">
+<div class="navbar-inner">
+  <div class="container">
 
-          <% # heading logo %>
-          <a href="http://aiddata.org" id='logo' style="position:absolute">
-            <%= image_tag "adt.png" %>
+    <% # heading logo %>
+    <a href="http://aiddata.org" id='logo' style="position:absolute">
+      <%= image_tag "adt.png" %>
+    </a>
+
+    <nav>
+    <% if Rails.env.development? %>
+      <p class="pull-right" style="margin:5px;color:#fcc;font-size:20px"><b>DEVELOPMENT</b></p>
+    <% end %>
+    <ul class="nav pull-right">
+      <li><%= link_to "Home", root_path %> </li>
+      <!-- Links for anyone !-->
+      <%= render 'layouts/project_menu' %>
+
+      <%# Find in /app/helpers/sessions_helper %>
+      <% if signed_in? %>
+        <% # Links for signed-in users %>
+
+
+
+        <li id="fat-menu" class="dropdown">
+
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            Users <b class="caret"></b>
           </a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "My Profile", current_user %></li>
+            <li><%= link_to "All Users", users_path %></li>
+            <li class="divider"></li>
+            <li>
+              <%= link_to "Sign out", signout_path, method: "delete" %>
+            </li>
+          </ul>
 
-          <nav>
-          	<% if Rails.env.development? %>
-          		<p class="pull-right" style="margin:5px;color:#fcc;font-size:20px"><b>DEVELOPMENT</b></p>
-          	<% end %>
-            <ul class="nav pull-right">
-                  <li><%= link_to "Home", root_path %> </li>
-                  <!-- Links for anyone !-->
-                  <%= render 'layouts/project_menu' %>
-                  
-                  <%# Find in /app/helpers/sessions_helper %>
-                  <% if signed_in? %>
-                    <% # Links for signed-in users %>
+        </li>
 
-                    
+      <% else %>
 
-                    <li id="fat-menu" class="dropdown">
-                       
-                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                          Users <b class="caret"></b>
-                       </a>
-                      <ul class="dropdown-menu">
-                        <li><%= link_to "My Profile", current_user %></li>
-                        <li><%= link_to "All Users", users_path %></li>
-                        <li class="divider"></li>
-                        <li>
-                          <%= link_to "Sign out", signout_path, method: "delete" %>
-                        </li>
-                      </ul>
+        <% # Links for non-signed-in-users %>
+        <li><%= link_to "Sign In", signin_path %></li>
 
-                    </li>
-                  
-                  <% else %>
 
-                    <% # Links for non-signed-in-users %>
-                    <li><%= link_to "Create account", signup_path %></li>
-                    <li><%= link_to "Sign in", signin_path %></li>
-                  
-                  <% end %>
-            </ul>
-          </nav>
+      <% end %>
+    </ul>
+    </nav>
 
-        </div>
-      </div>
-    </header>
+  </div>
+</div>
+</header>
 <div class='row' id='image_and_header'>
   <%= image_tag "aiddata_background.jpg", id: "background-image"%>
   <h1 id="first_header"> <%= yield(:first_header) %></h1>
 </div>
-
