--- a/app/views/projects/_search_export.html.erb
+++ b/app/views/projects/_search_export.html.erb
@@ -1,12 +1,17 @@
 <div class='row'>
   <div class="center">
-    <a class="btn btn-info" data-toggle="modal" href="#export_dialog">
+    
+    <a class="btn btn-success" data-toggle="modal" href="#export_dialog">
       Export as CSV (<%= pluralize(@search.total, "Project") %>)
     </a>
     <% if current_user_is_aiddata %>
-      <%= link_to "Quick Export (CSV)", "#{@current_url.gsub(/projects/, 'projects.csv')}", class: 'btn' %> 
-      <i>(AidData only)</i>
+      <%= link_to "Quick Export (AidData only)", 
+        "#{@current_url.gsub(/projects/, 'projects.csv')}", class: 'btn' %> 
     <% end %>
+    <%= link_to "Analyze this CSV", 
+      "#{@current_url.gsub(/projects/, 'csv_health')}", class: 'btn btn-info' %> 
+    </a>
+
 
 
     <div class="modal hide" id="export_dialog" >
@@ -20,7 +25,7 @@
         <% 
           display_params = {}
 
-          scope_val = (params["scope"] || ["All"] ).join(", ")
+          scope_val = (params["scope_names"] || ["All"] ).join(", ")
           #if no scope is present, scope defaults to all
           scope_val = scope_val.gsub('_',' ').titleize
           display_params["Scope"] = scope_val
