--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,11 +16,11 @@ end
 	end
 end %>
 
-<% #if !(request.env['HTTP_REFERER'] =~ /\/projects/) && params[:scope] == "official_finance"
-	if params[:scope]
+<% 
+	if params[:scope_names]
 	  flash.now[:success] =  
 	  	"You are viewing <b>#{
-	  		params[:scope].map {|s| Scope.find_by_symbol(s).name}.join(' and ')
+	  		params[:scope_names].map {|s| Scope.find_by_name(s).name}.join(' and ')
 	  		}</b>. Click the filters below to change your settings.".html_safe 
 	end
 %> 	
@@ -43,15 +43,19 @@ end %>
 <br>
 <table id="project-search-results" >
 	<thead>
-		<tr >
+		<tr>
 			<% current_url_with_joiner_without_ordering = "#{@current_url.gsub(/&?dir=[a-z]+/, '').gsub(/&?order_by=[0-9a-z_]+/, '')}#{@joiner}" %>
-      <th><%= link_to "ID", 
-      "#{current_url_with_joiner_without_ordering}#{order_by_params("id")}" 
-        %> </th>
+     	<th>
+	      	<%= link_to "ID", 
+	      	"#{current_url_with_joiner_without_ordering}#{order_by_params("id")}" 
+	        %> 
+    	</th>
 
-      <th><%= link_to "Donor",
-      "#{current_url_with_joiner_without_ordering}#{order_by_params("donor_name")}"  
-        %></th>
+      	<th>
+      		<%= link_to "Donor",
+      		"#{current_url_with_joiner_without_ordering}#{order_by_params("donor_name")}"  
+       		 %>
+       	</th>
 
       <th><%= link_to "Title",
       "#{current_url_with_joiner_without_ordering}#{order_by_params("title")}"  
