String interp nil on project edit page

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, "Edit " + @project.title) %>
-<% provide(:first_header, "Edit " + @project.title) %>
+<% provide(:title, "Edit #{@project.title}") %>
+<% provide(:first_header, "Edit #{@project.title}") %>
 
 <%= render 'project_form' %>
 
